--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -19,10 +19,10 @@ services:
       - mysql_1
       - mysql_2
     ports:
-      - "6032:6032" # admin port for MySQL commands
       - "6033:6033" # main port
+      - "6032:6032" # admin port
     volumes:
-      - /opt/devel/projects/ProxySQL/proxysql:/opt/proxysql
+      - ../../proxysql:/opt/proxysql
     privileged: true
     networks:
       testing_net:
@@ -47,9 +47,9 @@ services:
                     "--general_log=ON",
                     "--general_log_file=/tmp/logs/mysqld0.log"]
     volumes:
-      - /opt/devel/projects/ProxySQL/proxysql/tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
-      - /opt/devel/projects/ProxySQL/proxysql/tests/certs:/etc/certs/
-      - /opt/devel/projects/ProxySQL/proxysql/tests/logs:/tmp/logs/
+      - ./tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./tests/certs:/etc/certs/
+      - ./tests/logs:/tmp/logs/
     environment:
       MYSQL_ROOT_USER: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
@@ -84,9 +84,9 @@ services:
                     "--general_log=ON",
                     "--general_log_file=/tmp/logs/mysqld1.log"]
     volumes:
-      - /opt/devel/projects/ProxySQL/proxysql/tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
-      - /opt/devel/projects/ProxySQL/proxysql/tests/certs:/etc/certs/
-      - /opt/devel/projects/ProxySQL/proxysql/tests/logs:/tmp/logs/
+      - ./tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./tests/certs:/etc/certs/
+      - ./tests/logs:/tmp/logs/
     environment:
       MYSQL_ROOT_USER: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
@@ -119,9 +119,9 @@ services:
                     "--general_log=ON",
                     "--general_log_file=/tmp/logs/mysqld2.log"]
     volumes:
-      - /opt/devel/projects/ProxySQL/proxysql/tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
-      - /opt/devel/projects/ProxySQL/proxysql/tests/certs:/etc/certs/
-      - /opt/devel/projects/ProxySQL/proxysql/tests/logs:/tmp/logs/
+      - ./tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./tests/certs:/etc/certs/
+      - ./proxysql/tests/logs:/tmp/logs/
     environment:
       MYSQL_ROOT_USER: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
