--- a/tests/proxysql/proxysql.test.cnf
+++ b/tests/proxysql/proxysql.test.cnf
@@ -24,6 +24,8 @@ mysql_variables =
 	monitor_query_interval=30000
 	monitor_query_timeout=150
 	monitor_timer_cached=false
+	mysql-auditlog_filename="/tmp/proxysql_audit"
+	mysql-eventslog_filename="/tmp/proxysql_events"
 	ping_interval_server=2000
 	ping_timeout_server=150
 	default_schema="test_database"
