- resolved errors with SSL settings of mysql docker nodes;

--- a/tests/mysql/Dockerfile
+++ b/tests/mysql/Dockerfile
@@ -7,3 +7,12 @@ FROM mysql:latest
 # allow all traffic for mysqld
 RUN echo "mysqld: ALL: allow" >> /etc/hosts.allow 
 
+#####
+# Courtesy of https://github.com/Dansyuqri/docker_mysql_ssl
+# Create a directory called certs in the image
+RUN mkdir -p /etc/certs
+# Copy all certs and keys into the newly created /etc/certs
+COPY certs/*.pem /etc/certs/
+# IMPORTANT: chown the /etc/certs folder so that it belongs to user:group mysql:mysql
+RUN chown -R mysql:mysql /etc/certs
+#####
