--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -39,17 +39,16 @@ services:
                     "--character-set-server=utf8mb4",
                     "--collation-server=utf8mb4_unicode_ci",
                     "--bind_address=0.0.0.0",
-                    # "--require_secure_transport=ON",
+                    "--require_secure_transport=ON",
                     "--ssl-ca=/etc/certs/ca.pem",
                     "--ssl-cert=/etc/certs/server-cert.pem",
                     "--ssl-key=/etc/certs/server-key.pem",
-                    "--tls_version=TLSv1.3",
+                    "--tls_version=TLSv1.2,TLSv1.3",
                     "--default_authentication_plugin=mysql_native_password",
                     "--general_log=ON",
                     "--general_log_file=/tmp/logs/mysqld0.log"]
     volumes:
       - ../tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
-      - ../tests/certs:/etc/certs
       - ../tests/logs:/tmp/logs
     environment:
       MYSQL_ROOT_USER: 'root'
@@ -76,17 +75,16 @@ services:
                     "--character-set-server=utf8mb4",
                     "--collation-server=utf8mb4_unicode_ci",
                     "--bind_address=0.0.0.0",
-                    # "--require_secure_transport=ON",
+                    "--require_secure_transport=ON",
                     "--ssl-ca=/etc/certs/ca.pem",
                     "--ssl-cert=/etc/certs/server-cert.pem",
                     "--ssl-key=/etc/certs/server-key.pem",
-                    "--tls_version=TLSv1.3",
+                    "--tls_version=TLSv1.2,TLSv1.3",
                     "--default_authentication_plugin=mysql_native_password",
                     "--general_log=ON",
                     "--general_log_file=/tmp/logs/mysqld1.log"]
     volumes:
       - ../tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql
-      - ../tests/certs:/etc/certs
       - ../tests/logs:/tmp/logs
     environment:
       MYSQL_ROOT_USER: 'root'
@@ -111,17 +109,16 @@ services:
                     "--character-set-server=utf8mb4",
                     "--collation-server=utf8mb4_unicode_ci",
                     "--bind_address=0.0.0.0",
-                    # "--require_secure_transport=ON",
+                    "--require_secure_transport=ON",
                     "--ssl-ca=/etc/certs/ca.pem",
                     "--ssl-cert=/etc/certs/server-cert.pem",
                     "--ssl-key=/etc/certs/server-key.pem",
-                    "--tls_version=TLSv1.3",
+                    "--tls_version=TLSv1.2,TLSv1.3",
                     "--default_authentication_plugin=mysql_native_password", 
                     "--general_log=ON",
                     "--general_log_file=/tmp/logs/mysqld2.log"]
     volumes:
       - ../tests/mysql/init-db.sql:/docker-entrypoint-initdb.d/init.sql:ro
-      - ../tests/certs:/etc/certs:rw
       - ../tests/logs:/tmp/logs:rw
     environment:
       MYSQL_ROOT_USER: 'root'
