--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -8,7 +8,7 @@ filterwarnings =
     ignore::DeprecationWarning
     
 log_cli = 1
-log_cli_level = DEBUG
+log_cli_level = INFO
 log_cli_format = %(message)s
 log_file = pytest.log
 log_file_level = INFO
