--- a/tests/proxysql/proxysql.test.cnf
+++ b/tests/proxysql/proxysql.test.cnf
@@ -76,7 +76,8 @@ mysql_servers =
 		port = 3307
 		weight = 2
 		hostgroup = 0
-		max_connections = 1
+		max_connections = 10
+		use_ssl = 1
 		ssl_ca = "/etc/certs/ca.pem"
 		ssl_cert = "/etc/certs/client-cert.pem"
 		ssl_key = "/etc/certs/client-key.pem"
@@ -84,9 +85,10 @@ mysql_servers =
 	{
 		address = "172.34.1.4"
 		port = 3308
-		weight = 2
+		weight = 3
 		hostgroup = 0
-		max_connections = 10
+		max_connections = 15
+		use_ssl = 1
 		ssl_ca = "/etc/certs/ca.pem"
 		ssl_cert = "/etc/certs/client-cert.pem"
 		ssl_key = "/etc/certs/client-key.pem"
